tests/snapshots/integration__snapshot_ui_last_item_selected.snap
---
source: tests/integration.rs
expression: "render_ui(&mut state, 100, 30)"
---
┌ vischat · simple.jsonl  [thinking folded — press t]──────────────────────────────────────────────┐
│+ [SYS]   session=test-ses model=claude-test cwd=/test tools=2                                    │
│+ [THINK] ...                                                                                     │
│+ [ASST]  Hello, world!                                                                           │
│+ [TOOL>] Bash · {                                                                                │
│+ [TOOL<] toolu-00 · hello                                                                        │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ [TOOL<] Tool Result ─────────────────────────────────────────────────────────────────────────────┐
│hello                                                                                             │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 j/k:move  g/G:first/last  Ctrl-d/u:scroll  Enter/Space:expand  t:thinking  r:reload  q:quit    4/4
