tests/snapshots/integration__snapshot_ui_second_item_selected.snap
---
source: tests/integration.rs
expression: "render_ui(&mut state, 100, 30)"
---
┌ vischat · simple.jsonl  [thinking folded — press t]──────────────────────────────────────────────┐
│+ [SYS]   session=test-ses model=claude-test cwd=/test tools=2                                    │
│+ [THINK] ...                                                                                     │
│+ [ASST]  Hello, world!                                                                           │
│+ [TOOL>] Bash · {                                                                                │
│+ [TOOL<] toolu-00 · hello                                                                        │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ [ASST] Assistant Response ───────────────────────────────────────────────────────────────────────┐
│Hello, world!                                                                                     │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 j/k:move  g/G:first/last  Ctrl-d/u:scroll  Enter/Space:expand  t:thinking  q:quit    2/4
