tests/snapshots/integration__snapshot_ui_thinking_visible.snap
---
source: tests/integration.rs
expression: "render_ui(&mut state, 100, 30)"
---
┌ vischat · simple.jsonl  [thinking visible]───────────────────────────────────────────────────────┐
│+ [SYS]   session=test-ses model=claude-test cwd=/test tools=2                                    │
│+ [THINK] Let me think.                                                                           │
│+ [ASST]  Hello, world!                                                                           │
│+ [TOOL>] Bash · {                                                                                │
│+ [TOOL<] toolu-00 · hello                                                                        │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ [SYS] System Init ───────────────────────────────────────────────────────────────────────────────┐
│Session:  test-session                                                                            │
│Model:    claude-test                                                                             │
│Cwd:      /test                                                                                   │
│Tools (2):                                                                                        │
│  Bash, Read                                                                                      │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 j/k:move  g/G:first/last  Ctrl-d/u:scroll  Enter/Space:expand  t:thinking  r:reload  q:quit    1/5
