tests/snapshots/integration__system_item_detail.snap
---
source: tests/integration.rs
expression: "items[0].detail"
---
Session:  test-session
Model:    claude-test
Cwd:      /test
Tools (2):
  Bash, Read
