tests/snapshots/integration__system_item_summary.snap
---
source: tests/integration.rs
expression: "items[0].summary"
---
session=test-ses model=claude-test cwd=/test tools=2
