tests/snapshots/integration__tool_use_detail.snap
---
source: tests/integration.rs
expression: "items[3].detail"
---
[TOOL USE] Bash
{
  "command": "echo hello"
}
